tests/baselines/reference/exportImportNonInstantiatedModule.errors.txt
exportImportNonInstantiatedModule.ts(5,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== exportImportNonInstantiatedModule.ts (1 errors) ====
    module A {
        export interface I { x: number }
    }
    
    module B {
           ~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export import A1 = A
        
    }
    
    var x: B.A1.I = { x: 1 };